--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -13,4 +17,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+input:focus {
+  /* border-color: red; */
+  border: 1px solid red;
+  outline: red;
+  /* border-bottom-color:red ; */
 }
